Update .env.example with correct Supabase URL

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+VITE_SUPABASE_URL=https://lunatique.supabase.co
+VITE_SUPABASE_ANON_KEY=your_anon_key_here
 
 # MercadoPago Configuration (for Edge Functions)
 MERCADOPAGO_ACCESS_TOKEN=TEST-564877013772959-091522-bf2d1c3bc97b8a9475e54bef2045f839-2054342269
