Add PayPal environment variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,14 @@ VITE_SUPABASE_ANON_KEY=your_anon_key_here
 # MercadoPago Configuration (for Edge Functions)
 MERCADOPAGO_ACCESS_TOKEN=TEST-564877013772959-091522-bf2d1c3bc97b8a9475e54bef2045f839-2054342269
 
+# PayPal Configuration (for Frontend)
+VITE_PAYPAL_CLIENT_ID=your_paypal_client_id_here
+VITE_PAYPAL_MODE=sandbox
+
+# PayPal Configuration (for Edge Functions)
+PAYPAL_CLIENT_ID=your_paypal_client_id_here
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
+PAYPAL_MODE=sandbox
+
 # Environment
 NODE_ENV=development
