--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -11,3 +11,18 @@ verify_jwt = false
 
 [functions.inventory-alert]
 verify_jwt = false
+
+[functions.paypal-create-order]
+verify_jwt = false
+
+[functions.paypal-capture-order]
+verify_jwt = false
+
+[functions.mercadopago-create-preference]
+verify_jwt = false
+
+[functions.mercadopago-get-payment]
+verify_jwt = false
+
+[functions.mercadopago-webhook]
+verify_jwt = false
