docs: Agregadas variables de entorno para N8N webhook
- VITE_N8N_ORDER_WEBHOOK_URL: URL del webhook para notificaciones
- VITE_WEBHOOK_SECRET: Secret para firma HMAC de seguridad

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,12 @@ PAYPAL_CLIENT_ID=your_paypal_client_id_here
 PAYPAL_CLIENT_SECRET=your_paypal_client_secret_here
 PAYPAL_MODE=sandbox
 
+# N8N Webhook Configuration
+# URL del webhook de N8N para notificaciones de órdenes
+VITE_N8N_ORDER_WEBHOOK_URL=https://dvwebhook.brandora.space/webhook/order-created
+
+# Secret para firmar los webhooks (cambiar en producción)
+VITE_WEBHOOK_SECRET=luinatique-webhook-secret-2024-CHANGE-THIS-IN-PRODUCTION
+
 # Environment
 NODE_ENV=development
